# org_demo

./: .env.example  .gitignore  .python-version  Caddyfile  Dockerfile  README.md  compose.yml  main.py  manage.py  pyproject.toml  run_backend.sh
frontend/: openapi.json  package-lock.json  package.json
frontend/src/app/: main.ts
frontend/src/app/assets/: reset.css
frontend/src/shared/api/: client.ts  schema.ts
frontend/src/views/: HomeView.vue
org/: manage.py
org/conf/: asgi.py  settings.py  urls.py  wsgi.py
org/departments/: admin.py  api.py  api_test.py  apps.py  models.py  models_test.py
org/departments/management/commands/: seed_employees.py
org/departments/migrations/: 0001_initial.py  0002_position_employee_position.py  0003_department_employee_department.py  0004_department_tn_ancestors_count_and_more.py
org/org/: asgi.py  settings.py  urls.py  wsgi.py
