[project]
name = "org-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "django>=6.0.1",
    "django-ninja>=1.5.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "org.conf.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
